[gd_scene load_steps=11 format=1]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_0.png" type="Texture" id=2]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_1.png" type="Texture" id=3]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_2.png" type="Texture" id=4]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_3.png" type="Texture" id=5]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_4.png" type="Texture" id=6]
[ext_resource path="res://animation/helicopter/helikopter_anim_final_100_44_5.png" type="Texture" id=7]
[ext_resource path="res://animate_frames.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[node name="enemy" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.57125, 0, 0, 1.56102, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
script/script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 3.57125, 1.56102 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="area_enter" from="." to="." method="_on_enemy_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_enemy_body_enter"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


